--- a/lab_clinica_core/pubspec.yaml
+++ b/lab_clinica_core/pubspec.yaml
@@ -3,14 +3,19 @@ description: A new Flutter package project.
 version: 0.0.1
 
 environment:
-  sdk: ">=3.1.4 <4.0.0"
+  sdk: ">=3.2.3 <4.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  asyncstate: ^2.1.1-dev.1
   signals_flutter: ^3.0.0
   top_snackbar_flutter: ^3.1.0
+  loading_animation_widget: ^1.2.0+4
+  dio: ^5.4.0
+  shared_preferences: ^2.2.2
+  flutter_getit: ^2.0.0
 
 dev_dependencies:
   flutter_test:
