--- a/lab_clinica_self_service/android/app/build.gradle
+++ b/lab_clinica_self_service/android/app/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "com.android.application", version: '7.3.0', apply false
+    id "com.android.application"
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
 }
