Implementações realizadas: Repository de auth, service de login, criação do modulo e tela de login

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -47,6 +47,16 @@
 			"request": "launch",
 			"type": "dart",
 			"flutterMode": "release"
-		}
+		},
+		{
+			"name": "lab_clinica_painel DEV",
+			"cwd": "lab_clinica_painel",
+			"request": "launch",
+			"type": "dart",
+			"args": [
+				"--dart-define-from-file",
+				".config/env.json"
+			]
+		},
 	]
 }
